# recipe-api

./: .env.template  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: main.py
src/collections/: recipes.py
src/db/: __init__.py  connection.py
src/enumirations/: __init__.py  diet.py
src/models/: create_recipe.py  instruction_step.py  nutrition_information.py  recipe.py  yield_information.py
src/routers/: recipes.py
